work on add project

--- a/src/template.html
+++ b/src/template.html
@@ -16,9 +16,19 @@
 
       <div class="row-container">
         <nav class="column-nav">
-          <div class="project-item">
-            <span class="project-name">Main</span>
-            <img class="project-arrow" src="./todo-items/project/arrow-down.png">
+          <div class="project-container">
+            <div class="project-header">
+              <span class="project-header-text">Projects</span>
+              <img class="project-arrow" src="./todo-items/project/arrow-down.png">
+            </div>
+            <div class="project-list">
+              <div class="project-item project-1">
+                <span class="project-name">test</span>
+                <span class="circle">
+                  <span class="project-count">4</span>
+                </span>
+              </div>
+            </div>
           </div>
 
           <svg class="project-add" fill="#000000" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 512 512">
@@ -29,7 +39,7 @@
               </g>
             </g>
           </svg>
-          
+
         </nav>
 
         <div class="todo-outer-container">
